syntax = "proto3";

package multiplication;

service Multiplication {

    rpc multiplyMatrixVector (MultiplicationRequest) returns ( MatrixResponse) {}
    rpc getResult (MultiplicationRequest) returns (MatrixResponse);
}

message TestRequest{
    int64 a = 1;
    int64 b = 2;
}

message TestResponse{
    int64 result = 1;
}

message MultiplicationRequest {
    repeated int32 matrixA = 1;
    repeated int32 vectorB = 2;
}


message MatrixResponse{
    repeated int32 result = 1; // was row
}

//message matrixRow {
//    int32 id = 1;
//    repeated int32 element = 1;
//}
